--- a/client/author/package.json
+++ b/client/author/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "An application for New York State content managers to manage Maslow Access, the resident-facing social services application.",
   "homepage": "/",
-  "bugs": "https://github.com/ny/maslow/issues",
+  "bugs": "https://github.com/ny/findservices/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ny/maslow.git",
+    "url": "https://github.com/ny/findservices.git",
     "directory": "client/author"
   },
   "license": "GPL-2.0",
